--- a/src/Sesile/DelegationsBundle/Resources/views/Default/ajout.html.twig
+++ b/src/Sesile/DelegationsBundle/Resources/views/Default/ajout.html.twig
@@ -4,166 +4,164 @@
     <script type="text/javascript" src="{{ asset("/js/bootstrap-datepicker.js") }}"></script>
     <link rel="stylesheet" type="text/css" href="{{ asset("/css/datepicker.css") }}">
     <div class="bloc_page">
-        <div class="titre_page">
-            <span class="glyphicon glyphicon-export"></span>
-            &nbsp;&nbsp;&nbsp;Déléguer ses droits
-        </div>
-        <form action="{{ path("delegation_create") }}" method="post">
-            <span class="deleg-to-someone">Déléguer à : &nbsp;</span>
-            <select name="user" id="selectuser">
-                {% for user in users %}
-                    <option value="{{ user.id }}">{{ user.Prenom }} {{ user.Nom }}</option>
-                {% endfor %}
-            </select>
-            <br>
-            <br>
-            <span class="deleg-to-someone">Début délégation : &nbsp;</span>
-            <input class="datepicker deleg_debut_fin" id="deleg_debut" name="debut" type="datetime"/>
-            <br>
-            <span class="deleg-to-someone">Fin délégation : &nbsp;</span>
-            <input class="datepicker deleg_debut_fin" id="deleg_fin" name="fin" type="datetime"/>
-            <br>
-            <button type="submit" class="btn btn-success">Enregistrer</button>
-            <a href="{{ path("delegations_list") }}" class="btn btn-danger">Annuler</a>
-        </form>
+	<div class="titre_page">
+	    <span class="glyphicon glyphicon-export"></span>
+	    &nbsp;&nbsp;&nbsp;Déléguer ses droits
+	</div>
+	<form action="{{ path("delegation_create") }}" method="post">
+	    <div id="delegaqui" class="col-md-4">
+		<span class="deleg-to-someone">Déléguer à : &nbsp;</span>
+		<select name="user" id="selectuser">
+		    {% for user in users %}
+			<option value="{{ user.id }}">{{ user.Prenom }} {{ user.Nom }}</option>
+		    {% endfor %}
+		</select>
+	    </div>
+
+	    <div id="delegdate" class="col-md-8">
+		<div class="row">
+		<span class="deleg-to-someone col-md-3">Début délégation : &nbsp;</span>
+		<input class="datepicker deleg_debut_fin col-md-6 " id="deleg_debut" name="debut" type="datetime"/>
+		<br>
+		</div>
+		<div class="row">
+		<span class="deleg-to-someone col-md-3">Fin délégation : &nbsp;</span>
+		<input class="datepicker deleg_debut_fin col-md-6 " id="deleg_fin" name="fin" type="datetime"/>
+		<br>
+		</div>
+	    </div>
+	    <br>
+	    <button type="submit" class="btn btn-success">Enregistrer</button>
+	    <a href="{{ path("delegations_list") }}" class="btn btn-danger">Annuler</a>
+	</form>
     </div>
     <script type="text/javascript">
-        var delegs = {{ delegs|json_encode|raw }};
-        var recues = {{ recues|json_encode|raw }};
+	var delegs = {{ delegs|json_encode|raw }};
+	var recues = {{ recues|json_encode|raw }};
 
-        var nowTemp = new Date();
-        var now = new Date(nowTemp.getFullYear(), nowTemp.getMonth(), nowTemp.getDate(), 0, 0, 0, 0);
-        var iduserselected = -1;
-   //     alert(JSON.stringify(recues));
+	var nowTemp = new Date();
+	var now = new Date(nowTemp.getFullYear(), nowTemp.getMonth(), nowTemp.getDate(), 0, 0, 0, 0);
+	var iduserselected = -1;
+	//     alert(JSON.stringify(recues));
 
-        var id=-1;
-
-
-        function onRenderCheckin(date){
-            var ok = true;
-            delegs.forEach(function(d){
-
-                // alert(date.valueOf()+"   -  "+d.debut+"000");
+	var id = -1;
 
 
-                if(date.valueOf()>= d.debut+"000" && date.valueOf()<= d.fin+"000"){
+	function onRenderCheckin(date) {
+	    var ok = true;
+	    delegs.forEach(function (d) {
 
-                    ok=false;
-                }
-            });
-
-            recues.forEach(function(d){
-                console.log(d.userid+" , "+id);
-                if(d.userid==id){
-                    if(date.valueOf()>= d.debut+"000" && date.valueOf()<= d.fin+"000"){
-
-                        ok=false;
-                    }
-                }
-
-            });
-
-            return (!ok || (date.valueOf() < now.valueOf())) ? 'disabled' : '';
-        }
+		// alert(date.valueOf()+"   -  "+d.debut+"000");
 
 
-        var checkin = $('#deleg_debut')
-                .datepicker({
-                    onRender: function (date) {
+		if (date.valueOf() >= d.debut + "000" && date.valueOf() <= d.fin + "000") {
 
-                        return onRenderCheckin(date);
-                    }
-                })
-                .on('changeDate',function (ev) {
-                    if (ev.date.valueOf() > checkout.date.valueOf()) {
-                        var newDate = new Date(ev.date)
-                        newDate.setDate(newDate.getDate() + 1);
-                        checkout.setValue(newDate);
+		    ok = false;
+		}
+	    });
 
-                    }
-                    checkin.hide();
-                    checkout.onRender(function(date){
-                        return onRenderCheckout(date);
-                    });
-                    $('#deleg_fin').datepicker('update');
-                    $('#deleg_fin')[0].focus();
-                }).data('datepicker');
+	    recues.forEach(function (d) {
+		console.log(d.userid + " , " + id);
+		if (d.userid == id) {
+		    if (date.valueOf() >= d.debut + "000" && date.valueOf() <= d.fin + "000") {
 
-        var checkout = $('#deleg_fin')
-                .datepicker({
-                    onRender: function (date) {
+			ok = false;
+		    }
+		}
 
-                        return onRenderCheckout(date);
-                    }
-                })
-                .on('changeDate',function (ev) {
-                    checkout.hide();
-                }).data('datepicker');
+	    });
+
+	    return (!ok || (date.valueOf() < now.valueOf())) ? 'disabled' : '';
+	}
 
 
-        function onRenderCheckout(date){
-            var ok = true;
-            delegs.forEach(function(d){
+	var checkin = $('#deleg_debut')
+		.datepicker({
+		    onRender: function (date) {
 
-                // alert(date.valueOf()+"   -  "+d.debut+"000");
+			return onRenderCheckin(date);
+		    }
+		})
+		.on('changeDate',function (ev) {
+		    if (ev.date.valueOf() > checkout.date.valueOf()) {
+			var newDate = new Date(ev.date)
+			newDate.setDate(newDate.getDate() + 1);
+			checkout.setValue(newDate);
 
+		    }
+		    checkin.hide();
+		    checkout.onRender(function (date) {
+			return onRenderCheckout(date);
+		    });
+		    $('#deleg_fin').datepicker('update');
+		    $('#deleg_fin')[0].focus();
+		}).data('datepicker');
 
-                if(date.valueOf()>= d.debut+"000" && date.valueOf()<= d.fin+"000"){
+	var checkout = $('#deleg_fin')
+		.datepicker({
+		    onRender: function (date) {
 
-                    ok=false;
-                }
-            });
-
-            recues.forEach(function(d){
-                console.log(d.userid+" , "+id);
-                if(d.userid==id){
-                    if(date.valueOf()>= d.debut+"000" && date.valueOf()<= d.fin+"000"){
-
-                        ok=false;
-                    }
-                }
-
-            });
-            return (!ok || (date.valueOf() <= checkin.date.valueOf() ))? 'disabled' : '';
-        }
-
-
-        function onUserChange(){
-            id=$('#selectuser').val();
-
-
-
-
-
+			return onRenderCheckout(date);
+		    }
+		})
+		.on('changeDate',function (ev) {
+		    checkout.hide();
+		}).data('datepicker');
 
 
-            checkin.onRender(function(date){
-                return onRenderCheckin(date);
-            });
+	function onRenderCheckout(date) {
+	    var ok = true;
+	    delegs.forEach(function (d) {
 
-            $('#deleg_debut').datepicker('update');
-
-
-
-            checkout.onRender(function(date){
-                return onRenderCheckout(date);
-            });
+		// alert(date.valueOf()+"   -  "+d.debut+"000");
 
 
+		if (date.valueOf() >= d.debut + "000" && date.valueOf() <= d.fin + "000") {
 
-            $('#deleg_fin').datepicker('update');
+		    ok = false;
+		}
+	    });
 
-        }
+	    recues.forEach(function (d) {
+		console.log(d.userid + " , " + id);
+		if (d.userid == id) {
+		    if (date.valueOf() >= d.debut + "000" && date.valueOf() <= d.fin + "000") {
 
-        $("#selectuser").change(function (e){
-            onUserChange();
-        });
+			ok = false;
+		    }
+		}
+
+	    });
+	    return (!ok || (date.valueOf() <= checkin.date.valueOf() )) ? 'disabled' : '';
+	}
 
 
-        onUserChange();
+	function onUserChange() {
+	    id = $('#selectuser').val();
 
 
+	    checkin.onRender(function (date) {
+		return onRenderCheckin(date);
+	    });
 
+	    $('#deleg_debut').datepicker('update');
+
+
+	    checkout.onRender(function (date) {
+		return onRenderCheckout(date);
+	    });
+
+
+	    $('#deleg_fin').datepicker('update');
+
+	}
+
+	$("#selectuser").change(function (e) {
+	    onUserChange();
+	});
+
+
+	onUserChange();
 
     </script>
 {% endblock %}
