francais dans liste des classeurs

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/index.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/index.html.twig
@@ -27,11 +27,11 @@
                     "sFirst": "",
                     "sPrevious": "",
                     "sNext": "",
-                    "sLast": "",
-                    "sZeroRecords": "Vous n'avez attribu&eacute; aucune d&eacute;l&eacute;gation ",
-                    "sEmptyTable": "Vous n'avez attribu&eacute; aucune d&eacute;l&eacute;gation ",
-                    "sLengthMenu": "Afficher _MENU_ records par page"
-                }
+                    "sLast": ""
+                },
+		"sZeroRecords": "Aucun classeur à afficher",
+		"sEmptyTable": "Aucun classeur à afficher",
+		"sLengthMenu": "Afficher _MENU_ classeurs par page"
             },
             "iDisplayLength": 15,
             "aLengthMenu": [15, 30, 50, 100],
