--- a/src/Sesile/MainBundle/Resources/views/Collectivite/new.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Collectivite/new.html.twig
@@ -29,7 +29,7 @@
 	    <img class="gradientawesome col-md-8" src="{{ asset("/images/bg-module-top-shadow.png") }}"/>
 	    <div class="col-md-2"></div>
 	</div>
-	<div class="titredeslabels">{{ form_label(form.textmailnew) }}</div>
+	{{ form_label(form.textmailnew) }}
 	{{ form_widget(form.textmailnew) }}
 	<br>
 	<br>
