--- a/web/css/style.css
+++ b/web/css/style.css
@@ -47,11 +47,49 @@ html, body {
 	margin-top: 5%;
 }
 
-#img_collectivite {
-	width: 100px;
-	height: 100px;
+
+#img_imposetonstyle {
+	/*margin: 8% auto 12% auto;*/
+	position: relative;
+	margin-left:50%;
+	left: -50px;
+	margin-top: 12% ;
+	margin-bottom: 12%;
+	width:100px;
+	height:100px;
+}
+
+.border_imposetonstyle{
+	position: relative;
+	border: 5px solid #cccccc;
+	width: 80%;
 	margin: auto;
-	margin-top: 15%;
+	margin-bottom: 10%;
+}
+
+.border_imposetonstyle:after, .border_imposetonstyle:before {
+	bottom: 100%;
+	left: 50%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+}
+
+.border_imposetonstyle:after {
+	border-color: rgba(255, 255, 255, 0);
+	border-bottom-color: #ffffff;
+	border-width: 22px;
+	margin-left: -22px;
+}
+
+.border_imposetonstyle:before {
+	border-color: rgba(204, 204, 204, 0);
+	border-bottom-color: #cccccc;
+	border-width: 29px;
+	margin-left: -29px;
 }
 
 /*HEADER FOOTER*/
