Classuer validable en tenant compte des délégations

--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -33,7 +33,7 @@
 
 <div id="maman">
 <div id="gauche">
-    <a href="/app_dev.php/ ">
+    <a href={{ app.request.getBaseURL() }}">
     <div id="logo">
             <img src="{{ asset("/images/badlogo.png") }}"/>
         </div>
