modifs tableau délég + menu user + légende (presque ok)

--- a/src/Sesile/DelegationsBundle/Resources/views/Default/liste_all.html.twig
+++ b/src/Sesile/DelegationsBundle/Resources/views/Default/liste_all.html.twig
@@ -2,7 +2,7 @@
 <table class="table tableau dtables">
     <thead>
     <tr>
-        <th></th>
+        <th width="10%">Entrant/Sortant</th>
         <th>Utilisateur</th>
         <th>Début</th>
         <th>Fin</th>
@@ -36,9 +36,6 @@
                 <td class="boutons_action">
                     <a href="{{ path("delegation_edit", {'id' : delegation.id }) }}">
                         <span class="glyphicon glyphicon-pencil"></span>
-                    </a>
-                    <a href="{{ path("delegation_edit", {'id' : delegation.id }) }}">
-                        <span class="glyphicon glyphicon-trash"></span>
                     </a>
                 </td>
 
