--- a/web/css/style.css
+++ b/web/css/style.css
@@ -424,10 +424,10 @@ label{
 	text-shadow: 0 1px 0 #ffffff;
 }
 .delegdo{
-	color: #3285AB;
+	color: #83B13A;
 }
 .delegre{
-	color: #DBA209;
+	color: #CA4C4D;
 }
 
 select [name=user] {
