--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -36,16 +36,16 @@
                             Liste des classeurs
                         </a>
                     </li>
+		    <li>
+			<a href="{{ path("classeur_new") }}">
+			    <img class="arrows" src="{{ asset("/images/arrowblue.png") }}"/>
+			    Ajout d'un classeur
+			</a>
+		    </li>
                     <li>
                         <a href="{{ path("index_valider") }}">
                             <img class="arrows" src="{{ asset("/images/arrowblue.png") }}"/>
-                            Classeur(s) reçu(s)
-                        </a>
-                    </li>
-                    <li>
-                        <a href="{{ path("classeur_new") }}">
-                            <img class="arrows" src="{{ asset("/images/arrowblue.png") }}"/>
-                            Ajout d'un classeur
+                            Classeur(s) à valider
                         </a>
                     </li>
                     <li>
@@ -113,12 +113,12 @@
 			    Gestion des groupes
 			</a>
 		    </li>
-		    <li>
-			<a href="{{ path("organigramme") }}">
-			    <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
-			    Organigramme
-			</a>
-		    </li>
+		    {#<li>#}
+			{#<a href="{{ path("organigramme") }}">#}
+			    {#<img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>#}
+			    {#Organigramme#}
+			{#</a>#}
+		    {#</li>#}
             {% if is_granted('ROLE_SUPER_ADMIN') %}
                 <li>
                 <a href="{{ path("index_collectivite") }}">
