--- a/src/Sesile/UserBundle/Resources/views/Hierarchie/legende.organigramme.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Hierarchie/legende.organigramme.html.twig
@@ -1,7 +1,15 @@
 <div class="legende" style="margin: 0em 0em 1em 0em !important;">
     <span class="txt_legende"><span class="glyphicon glyphicon-info-sign"></span>&nbsp;&nbsp;Informations</span>
-    <span class="glyphicon statut_1"></span>
-        <span class="texte_legende tl1">&nbsp;Classeur en cours&nbsp;&nbsp;&nbsp;<span
-		    class="pipe">|&nbsp;&nbsp;&nbsp;</span>
-blablablablablablablablablablabla
+
+Pour ajouter un utilisateur, selectionnez-le dans la liste déroulante, puis insérez-le en cliquant sur le +.<br>
+Pour retirer un utilisateur, selectionnez-le dans l'organigramme, puis cliquez sur le -<br><br>
+
+Il s'agit d'une hiérarchie dont le sens de lecture se fait de gauche à droite, il y a nécessairement un seul utilisateur en tête de groupe.<br>
+Pour ajouter un utilisateur au groupe, il vous faut séléctionner une personne référente dans le schéma.<br><br>
+
+Si la disposition de vos utilisateurs ne vous satisfait pas, vous pouvez le réorganiser par un "glisser-déposer". <br>
+Une ramification se créera lors de l'approche de l'élément souhaité.<br><br>
+
+Votre organigramme terminé, vous devez le nommer puis l'enregistrer 'v vous pourrez le renommer par la suite en l'éditant.<br>
+L'icône 'x supprime votre groupe.
 </div>
