--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
@@ -23,7 +23,7 @@
         </button>
         {% include "SesileClasseurBundle:Classeur:boutons_action.html.twig" %}
 
-        {% if classeur.isDelegatedToMe(app.user) %}
+        {% if classeur.isDelegatedToMe(app.user.id) %}
         <br>
         <div class="legende">
             <span class="txt_legende"><span class="glyphicon glyphicon-pushpin"></span>&nbsp;&nbsp;Délégation</span>
