"Informations" dans gestion des groupes en cours de réalisation toggle ajouté

--- a/src/Sesile/UserBundle/Resources/views/Hierarchie/tools.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Hierarchie/tools.html.twig
@@ -17,8 +17,8 @@ Nom&nbsp;:&nbsp;
 	{% endfor %}
     </select>
 
-    <button type="button" id="addUser" class="btn btn-default btn-envoyer sesiletooltip" data-original-title="Ajouter">
-	<span class="glyphicon glyphicon-plus" style="color: #6D6E70"></span>
+    <button type="button" id="addUser" class="btn btn-success btn-envoyer sesiletooltip" data-original-title="Ajouter">
+	<span class="glyphicon glyphicon-plus"></span>
     </button>
 
     <button type="button" id="btnSupprimer" class="btn btn-danger btn-envoyer sesiletooltip" data-original-title="Retirer">
