--- a/src/Sesile/MainBundle/Resources/views/Collectivite/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Collectivite/index.html.twig
@@ -25,9 +25,6 @@
 			    <a href="{{ path("edit_collectivite", {'id' : coll.id }) }}">
 				<span class="glyphicon glyphicon-pencil"></span>
 			    </a>
-			    <a href="{{ path("edit_collectivite", {'id' : coll.id }) }}">
-				<span class="glyphicon glyphicon-trash"></span>
-			    </a>
 			</td>
 		    </tr>
 		{% endfor %}
@@ -46,14 +43,14 @@
     <link type="text/css" href="{{ asset("/datatables/css/jquery.dataTables.css") }}" rel="stylesheet"/>
     <script type="application/javascript">
 	$(document).ready(function () {
-	    $(".dtables").dataTable({
+	    $(".table").dataTable({
 		"oLanguage": {
 		    "sSearch": "Rechercher&nbsp;:",
 		    "sInfo": "Classeur  _START_ &agrave; _END_ sur _TOTAL_",
 		    "sInfoEmpty": "Affichage de l'&eacute;lement 0 &agrave; 0 sur 0 &eacute;l&eacute;ments",
 		    "sInfoFiltered": "(filtr&eacute; de _MAX_ &eacute;l&eacute;ments au total)",
 		    "sZeroRecords": "Aucun enregistrement &agrave; afficher",
-		    "sLengthMenu": "Afficher _MENU_ classeurs par page",
+		    "sLengthMenu": "Afficher _MENU_ collectivités par page",
 		    "oPaginate": {
 			"sFirst": "",
 			"sPrevious": "",
@@ -65,7 +62,7 @@
 		"aLengthMenu": [15, 30, 50, 100],
 		"sDom": 'lft<"footer_datatables"p>',
 		"aoColumnDefs": [
-		    { "bSortable": false, "aTargets": [ 5, 6 ] }
+		    { "bSortable": false, "aTargets": [ 3 ] }
 		],
 		"sPaginationType": "full_numbers"
 	    });
