--- a/src/Sesile/UserBundle/Resources/views/Hierarchie/tools.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Hierarchie/tools.html.twig
@@ -4,7 +4,7 @@ Nom&nbsp;:&nbsp;
 <button id="btn-envoyer" type="button" class="btn btn-success btn-envoyer sesiletooltip" data-original-title="Enregistrer">
     <span class="glyphicon glyphicon-ok" style="color: #ffffff"></span>
 </button>
-<button id="btn-annuler" type="button" class="btn btn-danger btn-envoyer sesiletooltip" data-original-title="Annuler">
+<button id="btn-annuler" type="button" class="btn btn-danger btn-envoyer sesiletooltip" data-original-title="Supprimer">
     <span class=" glyphicon glyphicon-remove" style="color: #ffffff"></span>
 </button>
 </div>
