--- a/web/css/style.css
+++ b/web/css/style.css
@@ -457,6 +457,10 @@ select [name=user] {
 	display: inline-block;
 }
 
+.retourbtn{
+	display: inline;
+}
+
 .btn {
 	margin: 0 3px 0 0 !important;
 }
