--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -149,7 +149,7 @@
 				    "aLengthMenu": [15, 30, 50, 100],
 				    "sDom": 'lft<"footer_datatables"p>',
 				    "aoColumnDefs": [
-					{ "bSortable": false, "aTargets": [ 0, 4 ] }
+					{ "bSortable": false, "aTargets": [ 4 ] }
 				    ],
 				    "sPaginationType": "full_numbers"
 				});
