datatables modifiées avec txt correspondants + boutons ajoutés lors d'un retour + gestion des marges

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/index.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/index.html.twig
@@ -29,15 +29,15 @@
                     "sNext": "",
                     "sLast": ""
                 },
-		"sZeroRecords": "Aucun classeur à afficher",
-		"sEmptyTable": "Aucun classeur à afficher",
+		"sZeroRecords": "Aucun classeur &agrave; afficher",
+		"sEmptyTable": "Aucun classeur &agrave; afficher",
 		"sLengthMenu": "Afficher _MENU_ classeurs par page"
             },
             "iDisplayLength": 15,
             "aLengthMenu": [15, 30, 50, 100],
             "sDom": 'lft<"footer_datatables"p>',
             "aoColumnDefs": [
-                { "bSortable": false, "aTargets": [ 4, 5 ] }
+                { "bSortable": false, "aTargets": [ 6 ] }
             ],
             "sPaginationType": "full_numbers"
         });
