--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
@@ -30,14 +30,14 @@
                 </div>
             </div>
             <div id="contenttypedform"></div>
+	    <div class="btndemerde">
+	    <a href="{{ path('classeur') }}">
+		<button type="button" class="btn btn-default navbar-btn">
+		    Retour à la liste des classeur
+		</button>
+	    </a>
+	    </div>
         </form>
-        <br/>
-
-        <a href="{{ path('classeur') }}">
-            <button type="button" class="btn btn-default navbar-btn">
-                Retour à la liste des classeur
-            </button>
-        </a>
     </div>
 {% endblock %}
 
