--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/a_retracter.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/a_retracter.html.twig
@@ -8,4 +8,33 @@
         </div>
         {% include 'SesileClasseurBundle:Classeur:liste.html.twig' %}
     </div>
+    <script type="application/javascript" src="{{ asset("/datatables/jquery.dataTables.min.js") }}"></script>
+    <link type="text/css" href="{{ asset("/datatables/css/jquery.dataTables.css") }}" rel="stylesheet"/>
+    <script type="application/javascript">
+	$(document).ready(function () {
+	    $(".dtables").dataTable({
+		"oLanguage": {
+		    "sSearch": "Rechercher&nbsp;:",
+		    "sInfo": "Classeur  _START_ &agrave; _END_ sur _TOTAL_",
+		    "sInfoEmpty": "Affichage de l'&eacute;lement 0 &agrave; 0 sur 0 &eacute;l&eacute;ments",
+		    "sInfoFiltered": "(filtr&eacute; de _MAX_ &eacute;l&eacute;ments au total)",
+		    "sZeroRecords": "Aucun classeur r&eacute;tractable &agrave; afficher",
+		    "sLengthMenu": "Afficher _MENU_ classeurs r&eacute;tractables par page",
+		    "oPaginate": {
+			"sFirst": "",
+			"sPrevious": "",
+			"sNext": "",
+			"sLast": ""
+		    }
+		},
+		"iDisplayLength": 15,
+		"aLengthMenu": [15, 30, 50, 100],
+		"sDom": 'lft<"footer_datatables"p>',
+		"aoColumnDefs": [
+		    { "bSortable": false, "aTargets": [ 6 ] }
+		],
+		"sPaginationType": "full_numbers"
+	    });
+	});
+    </script>
 {% endblock %}
