--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/a_valider.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/a_valider.html.twig
@@ -32,7 +32,7 @@
 		"aLengthMenu": [15, 30, 50, 100],
 		"sDom": 'lft<"footer_datatables"p>',
 		"aoColumnDefs": [
-		    { "bSortable": false, "aTargets": [ 4, 5 ] }
+		    { "bSortable": false, "aTargets": [ 6 ] }
 		],
 		"sPaginationType": "full_numbers"
 	    });
