--- a/src/Sesile/DelegationsBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/DelegationsBundle/Resources/views/Default/index.html.twig
@@ -23,7 +23,7 @@
                 "sInfo": "Classeur  _START_ &agrave; _END_ sur _TOTAL_",
                 "sInfoEmpty": "Affichage de l'&eacute;lement 0 &agrave; 0 sur 0 &eacute;l&eacute;ments",
                 "sInfoFiltered": "(filtr&eacute; de _MAX_ &eacute;l&eacute;ments au total)",
-                "sLengthMenu": "Afficher _MENU_ classeurs par page",
+                "sLengthMenu": "Afficher _MENU_ délégations donn&eacute;es par page",
                 "oPaginate": {
                     "sFirst": "",
                     "sPrevious": "",
