--- a/src/Sesile/MainBundle/Resources/views/Collectivite/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Collectivite/index.html.twig
@@ -20,7 +20,7 @@
 		    <tr class="coll-row" data-id="{{ coll.id }}">
 			<td>{{ coll.nom }}</td>
 			<td>{{ coll.domain }}</td>
-			<td>{{ coll.active }}</td>
+			<td>{% if  coll.active == 1 %}<div class="glyphicon glyphicon-ok" style="color: #5CB85C"></div>{% else %}<div class="glyphicon glyphicon-remove" style="color: #D9534F"></div>{% endif %}</td>
 			<td class="boutons_action">
 			    <a href="{{ path("edit_collectivite", {'id' : coll.id }) }}">
 				<span class="glyphicon glyphicon-pencil"></span>
