--- a/src/Sesile/MainBundle/Resources/views/Collectivite/new.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Collectivite/new.html.twig
@@ -70,10 +70,8 @@
 	{{ form_end(form) }}
 
 	<div class="retourbtn">
-	<a href="{{ path('collectivité') }}">
-	    <button type="button" class="btn btn-default navbar-btn">
+	<a href="{{ path('index_collectivite') }}" class="btn btn-default navbar-btn">
 		Retour à la liste des collectivités
-	    </button>
 	</a>
 	</div>
     </div>
