path collectivite pas bon

--- a/src/Sesile/MainBundle/Resources/views/Collectivite/new.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Collectivite/new.html.twig
@@ -70,7 +70,7 @@
 	{{ form_end(form) }}
 
 	<div class="retourbtn">
-	<a href="{{ path('collectivité') }}">
+	<a href="{{ path('index_collectivite') }}">
 	    <button type="button" class="btn btn-default navbar-btn">
 		Retour à la liste des collectivités
 	    </button>
