--- a/src/Sesile/CircuitBundle/Resources/views/Circuit/new.html.twig
+++ b/src/Sesile/CircuitBundle/Resources/views/Circuit/new.html.twig
@@ -25,7 +25,7 @@
         </div>
         <div id="circuits_list">
             {% for circuit in circuits %}
-                <p data-id="{{ circuit.id }}" data-ordre="{{ circuit.ordre }}">{{ circuit.name }} {% if circuit.isGroupe == 1 %}groupe{% endif %}</p>
+                <p data-id="{{ circuit.id }}" data-ordre="{{ circuit.ordre }}">{% if circuit.groupe == 1 %}<span class="glyphicon glyphicon-th-large"></span>{% endif %} {{ circuit.name }}</p>
             {% endfor %}
         </div>
         <span id="circuitadd_btn" class="glyphicon glyphicon-chevron-down"></span>
