Menu reste ouvert Corrections depuis mantis

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutons_action.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutons_action.html.twig
@@ -40,7 +40,7 @@
 
 
 {% if classeur.isModifiableByDelegates(usersdelegated) %}
-    <button class="btn btn-success pull-right" class="btn-modifs" data-action="{{ path("classeur_update") }}">
+    <button class="btn btn-success pull-right btn-modifs" data-action="{{ path("classeur_update") }}">
         <span class="glyphicon glyphicon-saved"></span>
         &nbsp;Enregistrer les modifications
     </button>
