--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -22,7 +22,6 @@
                     </li>
                 </ul>
             </li>
-
             <li class="menu-elem menu-bleu">
                 <div class="dd-toggle entete-menu">
                     <a href="#">
@@ -113,19 +112,13 @@
 			    Gestion des groupes
 			</a>
 		    </li>
-		    {#<li>#}
-			{#<a href="{{ path("organigramme") }}">#}
-			    {#<img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>#}
-			    {#Organigramme#}
-			{#</a>#}
-		    {#</li>#}
             {% if is_granted('ROLE_SUPER_ADMIN') %}
                 <li>
-                <a href="{{ path("index_collectivite") }}">
-                    <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
-                    Collectivités
-                </a>
-            </li>
+                    <a href="{{ path("index_collectivite") }}">
+                        <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
+                        Collectivités
+                    </a>
+                </li>
             {% endif %}
                 </ul>
             </li>
@@ -148,10 +141,9 @@
         });
 
         $(".titremenu").next(".dd-menu").slideDown();
-	$("a").click( function(e) {
-	    e.preventDefault();
-	    //position du titremenu a mettre dans le get
-	    window.location.href = $(this).attr("href");
-	});
+
+        {% if menu_color is defined %}
+            $(".menu-{{ menu_color }} .entete-menu").trigger("click");
+        {% endif %}
     </script>
 {% endblock %}
