--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
@@ -62,7 +62,7 @@
 
 
     var attributes = {width: 1, height: 1, id: "javaapplet"};
-    var parameters = {jnlp_href: window.location.hostname + ".launch.jnlp"};
+    var parameters = {jnlp_href: 'http://' + window.location.hostname + '/sesilesign/' + window.location.hostname + ".launch.jnlp"};
     var version = '1.7';
     deployJava.runApplet(attributes, parameters, version);
 
