Super modif de manon pour des icones qui claquent du sdan

--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -35,9 +35,10 @@
 <div id="gauche">
     <a href="{{ app.request.getBaseURL() }}">
     <div id="logo">
-            <img src="{{ asset("/images/badlogo.png") }}"/>
+            <img src="{{ asset("/images/2.4.6.logosesile.png") }}"/>
         </div>
     </a>
+	<img id="separateur_logo" src="{{ asset("/images/gradient-sesile.png") }}"/>
     <div class="border_imposetonstyle">
 	    {#TODO : <img src="{{ asset(upload_path_logo ~ image) }}" width="60px" height="60px"/> #}
 	    <img  id="img_imposetonstyle"  src="{{ asset("/uploads/logo_coll/" ~ app.session.get('logo')) }}" />
