--- a/web/css/style.css
+++ b/web/css/style.css
@@ -39,17 +39,15 @@ html, body {
 	box-shadow: 0.143em 0 0.8em #3a3a3a;
 }
 
-#logo {
-	width: 75px;
-	height: 107px;
+#logo img {
+	max-width : 190px;
 	margin: auto;
-	margin-bottom: 15%;
+	margin-bottom: 5%;
 	margin-top: 5%;
 }
 
-
 #img_imposetonstyle {
-	/*margin: 8% auto 12% auto;*/
+	margin: 8% auto 12% auto;
 	position: relative;
 	margin-left:50%;
 	left: -50px;
@@ -59,38 +57,43 @@ html, body {
 	height:100px;
 }
 
-.border_imposetonstyle{
-	position: relative;
-	border: 5px solid #cccccc;
-	width: 80%;
+#separateur_logo {
+	width: 100%;
 	margin: auto;
-	margin-bottom: 10%;
 }
 
-.border_imposetonstyle:after, .border_imposetonstyle:before {
-	bottom: 100%;
-	left: 50%;
-	border: solid transparent;
-	content: " ";
-	height: 0;
-	width: 0;
-	position: absolute;
-	pointer-events: none;
-}
+/*.border_imposetonstyle{*/
+	/*position: relative;*/
+	/*border: 5px solid #cccccc;*/
+	/*width: 80%;*/
+	/*margin: auto;*/
+	/*margin-bottom: 10%;*/
+/*}*/
 
-.border_imposetonstyle:after {
-	border-color: rgba(255, 255, 255, 0);
-	border-bottom-color: #ffffff;
-	border-width: 22px;
-	margin-left: -22px;
-}
+/*.border_imposetonstyle:after, .border_imposetonstyle:before {*/
+	/*bottom: 100%;*/
+	/*left: 50%;*/
+	/*border: solid transparent;*/
+	/*content: " ";*/
+	/*height: 0;*/
+	/*width: 0;*/
+	/*position: absolute;*/
+	/*pointer-events: none;*/
+/*}*/
 
-.border_imposetonstyle:before {
-	border-color: rgba(204, 204, 204, 0);
-	border-bottom-color: #cccccc;
-	border-width: 29px;
-	margin-left: -29px;
-}
+/*.border_imposetonstyle:after {*/
+	/*border-color: rgba(255, 255, 255, 0);*/
+	/*border-bottom-color: #ffffff;*/
+	/*border-width: 22px;*/
+	/*margin-left: -22px;*/
+/*}*/
+
+/*.border_imposetonstyle:before {*/
+	/*border-color: rgba(204, 204, 204, 0);*/
+	/*border-bottom-color: #cccccc;*/
+	/*border-width: 29px;*/
+	/*margin-left: -29px;*/
+/*}*/
 
 /*HEADER FOOTER*/
 #droite {
@@ -412,9 +415,9 @@ label{
 	font-weight: bold;
 }
 
-/*.indicationslegende{*/
-	/*display: none;*/
-/*}*/
+.indicationslegende{
+	display: none;
+}
 
 .pipe {
 	color: #cccccc;
